bk_ida/gobmkida/c0/computer_move
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/computer_move/src/interface/play_ascii.c:913:12: error: use of undeclared identifier 'QueuePage'
move_val = QueuePage::QueuePage( &i, &j, gameinfo->to_move); 
           ^
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/computer_move/src/interface/play_ascii.c:916:8: error: expected expression
QQmlJS::Managed::operator new( &lower_bound, &upper_bound); 
       ^
2 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/computer_move/src/obj/2/play_ascii.o] Error 1
